slight editing of makefile

--- a/libfs/Makefile
+++ b/libfs/Makefile
@@ -1,14 +1,12 @@
 # Target library
-lib := libfs.a
-
-all: $(lib)
-# Target library
+lib     := libfs.a
 objs    := fs.o disk.o
 CC      := gcc
 AR      := ar
-lib := libfs.a
 CFLAGS  := -Wall -MMD
 AFLAGS  := rcs
+
+all: $(lib)
 
 ifneq ($(V),1)
 Q = @
@@ -18,17 +16,17 @@ all: $(lib)
 deps := $(patsubst %.o,%.d,$(objs))
 -include $(deps)
 
-# Should run ar rcs libuthread.a queue.o, etc
+# Should run ar rcs libfs.a fs.o
 $(lib): $(objs)
-        @echo "AR       $@"
-        $(Q)$(AR) $(AFLAGS) $@ $^
+	@echo "AR       $@"
+	$(Q)$(AR) $(AFLAGS) $@ $^
 
 %.o: %.c
-        @echo "CC       $@"
-        $(Q)$(CC) $(CFLAGS) -c -o $@ $<
+	@echo "CC       $@"
+	$(Q)$(CC) $(CFLAGS) -c -o $@ $<
 
 clean:
-        @echo "CLEAN"
-        $(Q)rm -f $(lib) $(objs) $(deps)
+	@echo "CLEAN"
+	$(Q)rm -f $(lib) $(objs) $(deps)
 
 ## TODO: Phase 1
